--- a/initial-data-analysis.ipynb
+++ b/initial-data-analysis.ipynb
@@ -12348,7 +12348,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "cfa7fb75",
+   "id": "b9de61a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12401,7 +12401,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "4d627170",
+   "id": "7502f83f",
    "metadata": {},
    "outputs": [
     {
@@ -12432,7 +12432,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "3390c92b",
+   "id": "7c21afdf",
    "metadata": {},
    "outputs": [
     {
@@ -12463,7 +12463,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "cf71b940",
+   "id": "cbdbbd16",
    "metadata": {},
    "outputs": [
     {
@@ -12493,8 +12493,425 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "id": "77573867",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('I_IV_V', 0.029565554192757085),\n",
+       " ('IV_I_V', 0.028339035569040088),\n",
+       " ('I_V_VIm_IV', 0.020892330809686183),\n",
+       " ('IV_I_I', 0.02003313752071095),\n",
+       " ('V_VIm_IV', 0.016547242484883696),\n",
+       " ('I_V_VIm', 0.015277688119983646),\n",
+       " ('VIm_IV_I', 0.015213134508209068),\n",
+       " ('I_I_V', 0.014632152002237858),\n",
+       " ('I_IV_I_IV', 0.01181875975264405),\n",
+       " ('Im_V#_VI#', 0.01174875734297334)]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cifras_gospel = valid_cifras_df2[valid_cifras_df2[\"artist_genre\"] == \"pop-music\"]\n",
+    "rank_generic_cadence(cifras_gospel, [3,4])[0:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "54f488b3",
+   "id": "02813970",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cifras_gospel = valid_cifras_df2[valid_cifras_df2[\"artist_genre\"] == \"pop-music\"]\n",
+    "rank_generic_cadence(cifras_gospel, [3,4])[0:10]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bca27d97",
+   "metadata": {},
+   "source": [
+    "# Music Progression\n",
+    "\n",
+    "- Music progression are long sequence of chords while music cadence are usually a sequence of two chords.\n",
+    "- Now we have a way to check the chord progression of songs in our dataset.\n",
+    "- Using the functions created to check the chord progression, we can verify the most common progression for different music genres.\n",
+    "- We can define the chord progression of interest instead of searching for all sequence of chords by breaking cifras into specific sequences, as 3 or 4 chords. For a reference, we can use the following references: \n",
+    "    1. https://www.musical-u.com/learn/exploring-common-chord-progressions/\n",
+    "    2. https://blog.landr.com/common-chord-progressions/\n",
+    "    3. https://www.hooktheory.com/theorytab/common-chord-progressions\n",
+    "\n",
+    "## Machine Learning and Deep Learning\n",
+    "\n",
+    "- All development to extract information from the scraped data allowed us to define the most common chord progression for each music genre.\n",
+    "- Now we can use the data to perform regression and find rules to generate chord progressions based on the music genre.\n",
+    "- We can also use deep learning nlp methods to generate cifras with lyrics.\n",
+    "\n",
+    "## Next:\n",
+    "\n",
+    "- Add column to inform whether the song is major or minor, ie happy or sad.\n",
+    "- Save final dataframe to csv file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "a8f72a05",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['F', 'A', 'Em', 'Cm', 'D', 'Bbm', 'E', 'G', 'Fm', 'Am', 'G#m',\n",
+       "       'Db', 'C', 'Eb', 'Bm', 'B', 'Ab', 'Ebm', 'Dm', 'C#m', 'Bb', 'D#m',\n",
+       "       'G#', 'D#', 'F#m', 'C#', 'F#', 'Gm', 'A#', 'A#m', 'Gb', 'Emb',\n",
+       "       'Dbm', 'Gbm', 'B#m', 'Abm', 'G#mb'], dtype=object)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "valid_cifras_df2[\"cifra_key\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "d0e34dba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(valid_cifras_df2[valid_cifras_df2[\"cifra_key\"]=='G#mb'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "f6a22b83",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(valid_cifras_df2[valid_cifras_df2[\"cifra_key\"]=='Emb'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "1304b211",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-2"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Remove them\n",
+    "valid_cifras_df3 = valid_cifras_df2[valid_cifras_df2[\"cifra_key\"]!='Emb']\n",
+    "valid_cifras_df3 = valid_cifras_df3[valid_cifras_df3[\"cifra_key\"]!='G#mb']\n",
+    "\n",
+    "# Check the difference\n",
+    "len(valid_cifras_df3) - len(valid_cifras_df2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "16f3b227",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a new column which indicates whether the song is major or minor\n",
+    "def is_major(cifra_df_item):\n",
+    "    return \"m\" not in cifra_df_item['cifra_key']\n",
+    "\n",
+    "valid_cifras_df3[\"major\"] = valid_cifras_df3.apply(is_major, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "eac2dab7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cifra_url</th>\n",
+       "      <th>url_artist_name</th>\n",
+       "      <th>artist_name</th>\n",
+       "      <th>artist_genre</th>\n",
+       "      <th>url_song_name</th>\n",
+       "      <th>song_name</th>\n",
+       "      <th>cifra_file_loc</th>\n",
+       "      <th>cifra_key</th>\n",
+       "      <th>harmony</th>\n",
+       "      <th>chord_vocab</th>\n",
+       "      <th>concise_harmony</th>\n",
+       "      <th>concise_vocab</th>\n",
+       "      <th>concise_generic_harmony</th>\n",
+       "      <th>concise_generic_harmony_vocab</th>\n",
+       "      <th>tablatura</th>\n",
+       "      <th>Major</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>https://www.cifras.com.br/cifra/gesil-amarante...</td>\n",
+       "      <td>gesil-amarante-jr</td>\n",
+       "      <td>Gesil Amarante Jr</td>\n",
+       "      <td>gospel</td>\n",
+       "      <td>sou-um-milagre</td>\n",
+       "      <td>Sou um Milagre</td>\n",
+       "      <td>cifras/gesil-amarante-jr/sou-um-milagre.txt</td>\n",
+       "      <td>F</td>\n",
+       "      <td>['Dm', 'C', 'E', 'F', 'Dm', 'Bb', 'F', 'Dm', '...</td>\n",
+       "      <td>['A', 'Am', 'Bb', 'C', 'C/E', 'Dm', 'E', 'Em',...</td>\n",
+       "      <td>['Dm', 'C', 'E', 'F', 'Dm', 'Bb', 'F', 'Dm', '...</td>\n",
+       "      <td>['A', 'Am', 'Bb', 'C', 'Dm', 'E', 'Em', 'F', '...</td>\n",
+       "      <td>['VIm', 'V', 'VII', 'I', 'VIm', 'IV', 'I', 'VI...</td>\n",
+       "      <td>['I', 'III', 'IIIm', 'IIm', 'IV', 'V', 'VII', ...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>https://www.cifras.com.br/cifra/may-soares/nao...</td>\n",
+       "      <td>may-soares</td>\n",
+       "      <td>May Soares</td>\n",
+       "      <td>gospel</td>\n",
+       "      <td>nao-passes-daqui</td>\n",
+       "      <td>Não Passes Daqui</td>\n",
+       "      <td>cifras/may-soares/nao-passes-daqui.txt</td>\n",
+       "      <td>A</td>\n",
+       "      <td>['A', 'C#m', 'D', 'A', 'C#m', 'D', 'A', 'C#m',...</td>\n",
+       "      <td>['A', 'Bm', 'C#m', 'D', 'E', 'F#m']</td>\n",
+       "      <td>['A', 'C#m', 'D', 'A', 'C#m', 'D', 'A', 'C#m',...</td>\n",
+       "      <td>['A', 'Bm', 'C#m', 'D', 'E', 'F#m']</td>\n",
+       "      <td>['I', 'IIIm', 'IV', 'I', 'IIIm', 'IV', 'I', 'I...</td>\n",
+       "      <td>['I', 'IIIm', 'IIm', 'IV', 'V', 'VIm']</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>https://www.cifras.com.br/cifra/luciana-gomes/...</td>\n",
+       "      <td>luciana-gomes</td>\n",
+       "      <td>LUCIANA GOMES</td>\n",
+       "      <td>gospel</td>\n",
+       "      <td>consequencia-do-sucesso</td>\n",
+       "      <td>Consequência do Sucesso</td>\n",
+       "      <td>cifras/luciana-gomes/consequencia-do-sucesso.txt</td>\n",
+       "      <td>A</td>\n",
+       "      <td>['G', 'C', 'D', 'G', 'C', 'Am', 'C/G', 'D/F#',...</td>\n",
+       "      <td>['A', 'Am', 'Bm', 'C', 'C/G', 'D', 'D/F#', 'Em...</td>\n",
+       "      <td>['G', 'C', 'D', 'G', 'C', 'Am', 'C', 'D', 'G',...</td>\n",
+       "      <td>['A', 'Am', 'Bm', 'C', 'D', 'Em', 'G']</td>\n",
+       "      <td>['VI#', 'II#', 'IV', 'VI#', 'II#', 'Im', 'II#'...</td>\n",
+       "      <td>['I', 'II#', 'IIm', 'IV', 'Im', 'VI#', 'Vm']</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>https://www.cifras.com.br/cifra/gabriel-iglesi...</td>\n",
+       "      <td>gabriel-iglesias</td>\n",
+       "      <td>Gabriel Iglesias</td>\n",
+       "      <td>mpb</td>\n",
+       "      <td>velho-amor</td>\n",
+       "      <td>Velho Amor</td>\n",
+       "      <td>cifras/gabriel-iglesias/velho-amor.txt</td>\n",
+       "      <td>A</td>\n",
+       "      <td>['A7M', 'Bbº', 'Bm7', 'Cº', 'C#m7', 'Cº', 'Bm7...</td>\n",
+       "      <td>['A', 'A6', 'A7', 'A7(13-)', 'A7M', 'A7M/C#', ...</td>\n",
+       "      <td>['A7M', 'Bb°', 'Bm7', 'C°', 'C#m7', 'C°', 'Bm7...</td>\n",
+       "      <td>['A', 'A6', 'A7', 'A7M', 'Ab7M', 'Ab°', 'Am7',...</td>\n",
+       "      <td>['I7M', 'I#°', 'IIm7', 'II#°', 'IIIm7', 'II#°'...</td>\n",
+       "      <td>['I', 'I#°', 'I6', 'I7', 'I7M', 'II#7M', 'II#9...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>https://www.cifras.com.br/cifra/indiegentes/eu...</td>\n",
+       "      <td>indiegentes</td>\n",
+       "      <td>Indiegentes</td>\n",
+       "      <td>indie-rock</td>\n",
+       "      <td>eu-nao-sou-teu-amigo</td>\n",
+       "      <td>Eu Não Sou Teu Amigo</td>\n",
+       "      <td>cifras/indiegentes/eu-nao-sou-teu-amigo.txt</td>\n",
+       "      <td>Em</td>\n",
+       "      <td>['Em', 'Bm', 'Am', 'Bm', 'Em', 'Bm', 'Bm', 'A#...</td>\n",
+       "      <td>['A#m', 'Am', 'Bm', 'E', 'Em']</td>\n",
+       "      <td>['Em', 'Bm', 'Am', 'Bm', 'Em', 'Bm', 'Bm', 'A#...</td>\n",
+       "      <td>['A#m', 'Am', 'Bm', 'E', 'Em']</td>\n",
+       "      <td>['Im', 'Vm', 'IVm', 'Vm', 'Im', 'Vm', 'Vm', 'I...</td>\n",
+       "      <td>['I', 'IV#m', 'IVm', 'Im', 'Vm']</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                           cifra_url    url_artist_name  \\\n",
+       "0  https://www.cifras.com.br/cifra/gesil-amarante...  gesil-amarante-jr   \n",
+       "1  https://www.cifras.com.br/cifra/may-soares/nao...         may-soares   \n",
+       "2  https://www.cifras.com.br/cifra/luciana-gomes/...      luciana-gomes   \n",
+       "3  https://www.cifras.com.br/cifra/gabriel-iglesi...   gabriel-iglesias   \n",
+       "4  https://www.cifras.com.br/cifra/indiegentes/eu...        indiegentes   \n",
+       "\n",
+       "         artist_name artist_genre            url_song_name  \\\n",
+       "0  Gesil Amarante Jr       gospel           sou-um-milagre   \n",
+       "1         May Soares       gospel         nao-passes-daqui   \n",
+       "2      LUCIANA GOMES       gospel  consequencia-do-sucesso   \n",
+       "3   Gabriel Iglesias          mpb               velho-amor   \n",
+       "4        Indiegentes   indie-rock     eu-nao-sou-teu-amigo   \n",
+       "\n",
+       "                 song_name                                    cifra_file_loc  \\\n",
+       "0           Sou um Milagre       cifras/gesil-amarante-jr/sou-um-milagre.txt   \n",
+       "1         Não Passes Daqui            cifras/may-soares/nao-passes-daqui.txt   \n",
+       "2  Consequência do Sucesso  cifras/luciana-gomes/consequencia-do-sucesso.txt   \n",
+       "3               Velho Amor            cifras/gabriel-iglesias/velho-amor.txt   \n",
+       "4     Eu Não Sou Teu Amigo       cifras/indiegentes/eu-nao-sou-teu-amigo.txt   \n",
+       "\n",
+       "  cifra_key                                            harmony  \\\n",
+       "0         F  ['Dm', 'C', 'E', 'F', 'Dm', 'Bb', 'F', 'Dm', '...   \n",
+       "1         A  ['A', 'C#m', 'D', 'A', 'C#m', 'D', 'A', 'C#m',...   \n",
+       "2         A  ['G', 'C', 'D', 'G', 'C', 'Am', 'C/G', 'D/F#',...   \n",
+       "3         A  ['A7M', 'Bbº', 'Bm7', 'Cº', 'C#m7', 'Cº', 'Bm7...   \n",
+       "4        Em  ['Em', 'Bm', 'Am', 'Bm', 'Em', 'Bm', 'Bm', 'A#...   \n",
+       "\n",
+       "                                         chord_vocab  \\\n",
+       "0  ['A', 'Am', 'Bb', 'C', 'C/E', 'Dm', 'E', 'Em',...   \n",
+       "1                ['A', 'Bm', 'C#m', 'D', 'E', 'F#m']   \n",
+       "2  ['A', 'Am', 'Bm', 'C', 'C/G', 'D', 'D/F#', 'Em...   \n",
+       "3  ['A', 'A6', 'A7', 'A7(13-)', 'A7M', 'A7M/C#', ...   \n",
+       "4                     ['A#m', 'Am', 'Bm', 'E', 'Em']   \n",
+       "\n",
+       "                                     concise_harmony  \\\n",
+       "0  ['Dm', 'C', 'E', 'F', 'Dm', 'Bb', 'F', 'Dm', '...   \n",
+       "1  ['A', 'C#m', 'D', 'A', 'C#m', 'D', 'A', 'C#m',...   \n",
+       "2  ['G', 'C', 'D', 'G', 'C', 'Am', 'C', 'D', 'G',...   \n",
+       "3  ['A7M', 'Bb°', 'Bm7', 'C°', 'C#m7', 'C°', 'Bm7...   \n",
+       "4  ['Em', 'Bm', 'Am', 'Bm', 'Em', 'Bm', 'Bm', 'A#...   \n",
+       "\n",
+       "                                       concise_vocab  \\\n",
+       "0  ['A', 'Am', 'Bb', 'C', 'Dm', 'E', 'Em', 'F', '...   \n",
+       "1                ['A', 'Bm', 'C#m', 'D', 'E', 'F#m']   \n",
+       "2             ['A', 'Am', 'Bm', 'C', 'D', 'Em', 'G']   \n",
+       "3  ['A', 'A6', 'A7', 'A7M', 'Ab7M', 'Ab°', 'Am7',...   \n",
+       "4                     ['A#m', 'Am', 'Bm', 'E', 'Em']   \n",
+       "\n",
+       "                             concise_generic_harmony  \\\n",
+       "0  ['VIm', 'V', 'VII', 'I', 'VIm', 'IV', 'I', 'VI...   \n",
+       "1  ['I', 'IIIm', 'IV', 'I', 'IIIm', 'IV', 'I', 'I...   \n",
+       "2  ['VI#', 'II#', 'IV', 'VI#', 'II#', 'Im', 'II#'...   \n",
+       "3  ['I7M', 'I#°', 'IIm7', 'II#°', 'IIIm7', 'II#°'...   \n",
+       "4  ['Im', 'Vm', 'IVm', 'Vm', 'Im', 'Vm', 'Vm', 'I...   \n",
+       "\n",
+       "                       concise_generic_harmony_vocab  tablatura  Major  \n",
+       "0  ['I', 'III', 'IIIm', 'IIm', 'IV', 'V', 'VII', ...      False   True  \n",
+       "1             ['I', 'IIIm', 'IIm', 'IV', 'V', 'VIm']      False   True  \n",
+       "2       ['I', 'II#', 'IIm', 'IV', 'Im', 'VI#', 'Vm']      False   True  \n",
+       "3  ['I', 'I#°', 'I6', 'I7', 'I7M', 'II#7M', 'II#9...      False   True  \n",
+       "4                   ['I', 'IV#m', 'IVm', 'Im', 'Vm']      False  False  "
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "valid_cifras_df3.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "d461ab56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "valid_cifras_df3.to_csv(\"valid_cifras_concise_harmony.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1891ea04",
+   "metadata": {},
+   "source": [
+    "## Data Analysis\n",
+    "\n",
+    "To finalize this part of the study, let's check visually some characteristics of our filtered dataset, including:\n",
+    "\n",
+    "- Distribution of major and minor across different music genres.\n",
+    "- Most common music progressions for each music genre."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b2bab46",
    "metadata": {},
    "outputs": [],
    "source": []
