--- a/cifra-web-scrape-study.ipynb
+++ b/cifra-web-scrape-study.ipynb
@@ -101,7 +101,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "1329490b",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -114,48 +116,6 @@
    ],
    "source": [
     "!zcat sitemap_index.xml.gz"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "82895d91",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import xml.etree.ElementTree as ET\n",
-    "import requests\n",
-    "import gzip\n",
-    "\n",
-    "def extract_urls(xml_file):\n",
-    "    urls = []\n",
-    "    tree = ET.parse(xml_file)\n",
-    "    root = tree.getroot()\n",
-    "\n",
-    "    for sitemap in root.findall('sitemap'):\n",
-    "        loc = sitemap.find('loc').text\n",
-    "\n",
-    "        if loc.endswith('.xml.gz'):  # Handle compressed sitemaps\n",
-    "            response = requests.get(loc)\n",
-    "            with gzip.open(response.content, 'rb') as f:\n",
-    "                urls.extend(extract_urls(f))\n",
-    "        else:\n",
-    "            urls.append(loc)\n",
-    "\n",
-    "    return urls\n",
-    "\n",
-    "if __name__ == '__main__':\n",
-    "    xml_file = 'sitemap_index.xml'  # Replace with the actual file path\n",
-    "    all_urls = extract_urls(xml_file)\n",
-    "    print(all_urls)"
    ]
   },
   {
@@ -176,66 +136,6 @@
    ],
    "source": [
     "!ls"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "id": "bfbce5b8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(\"sitemap_index.xml\", \"r\", encoding=\"utf-8\") as f:\n",
-    "    sitemap_content = f.read()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "id": "7935e3aa",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Link does not exist in the sitemap.\n"
-     ]
-    }
-   ],
-   "source": [
-    "import requests\n",
-    "\n",
-    "def check_link_exists(link):\n",
-    "    with open(\"sitemap_index.xml\", \"r\", encoding=\"utf-8\") as f:\n",
-    "        sitemap_content = f.read()\n",
-    "\n",
-    "    # Extract links from the sitemap\n",
-    "    links = []\n",
-    "    for line in sitemap_content.splitlines():\n",
-    "        if \"<loc>\" in line:\n",
-    "            start = line.find(\"<loc>\") + 5\n",
-    "            end = line.find(\"</loc>\")\n",
-    "            links.append(line[start:end])\n",
-    "\n",
-    "    # Check if the link exists in the extracted links\n",
-    "    return link in links\n",
-    "\n",
-    "# Example usage\n",
-    "link = \"https://www.cifras.com.br/cifra/joao-gilberto/chega-de-saudade\"\n",
-    "\n",
-    "if check_link_exists(link):\n",
-    "    print(\"Link exists in the sitemap!\")\n",
-    "else:\n",
-    "    print(\"Link does not exist in the sitemap.\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f36d6d43",
-   "metadata": {},
-   "source": [
-    "### This is strange because we know that the link exists, even though it does not appear in the site map file."
    ]
   },
   {
